updating TaskView according to model changes

--- a/spec/javascripts/fixtures/task.html
+++ b/spec/javascripts/fixtures/task.html
@@ -1,7 +1,7 @@
 <script type="text/template" id="task-template">
   <div class="task">
-  <a href="" class="destroy">x</a>
-  <%= task.body %>
-  <%= task.author %>
+  <span class="destroy">x</span>
+  <%= body %>
+  <span class="author"><%= author %></span>
   </div>
 </script>
